--- a/index.html
+++ b/index.html
@@ -2,283 +2,144 @@
 <html lang="en">
 <head>
 
-<!-- ✅ GOOGLE SEARCH CONSOLE VERIFICATION -->
 <meta name="google-site-verification" content="bqpq9Ez2kLuenFxGxBR1KsPEFG8UMv2TJMJS5S8G4Bs" />
-
 <meta charset="UTF-8">
-<title>Chillwise Air Conditioner | AC Repair Service Delhi</title>
+
+<title>AC Repair Service in Delhi | Chillwise Air Conditioner</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Premium AC repair, installation and gas filling service in Delhi. Same-day service, transparent pricing, trusted technicians.">
 
-<!-- ✅ SEO KEYWORDS ADDED -->
-<meta name="keywords" content="AC repair service in Delhi, AC repair near me, AC service Delhi, AC installation Delhi, AC gas filling Delhi, split AC repair Delhi, window AC service Delhi, AC repair Uttam Nagar, AC service West Delhi, AC repair Dwarka, AC repair Janakpuri">
+<meta name="description"
+content="AC repair service in Delhi by Chillwise Air Conditioner. Same-day AC servicing, gas filling & installation in West Delhi, Uttam Nagar, Dwarka & Janakpuri.">
+
+<meta name="keywords"
+content="AC repair service in Delhi, AC repair near me, AC service Delhi, AC installation Delhi, AC gas filling Delhi, split AC repair Delhi, window AC service Delhi">
 
 <meta name="robots" content="index, follow">
 
+<!-- ===== LOCAL BUSINESS SCHEMA ===== -->
+<script type="application/ld+json">
+{
+ "@context":"https://schema.org",
+ "@type":"HVACBusiness",
+ "name":"Chillwise Air Conditioner",
+ "url":"https://mrs899963.github.io/chillwise-air.github.io/",
+ "telephone":"+91-9690990107",
+ "priceRange":"₹₹",
+ "address":{
+   "@type":"PostalAddress",
+   "addressLocality":"West Delhi",
+   "addressRegion":"Delhi",
+   "addressCountry":"IN"
+ },
+ "areaServed":["Uttam Nagar","West Delhi","Dwarka","Janakpuri"],
+ "openingHours":"Mo-Su 09:00-21:00"
+}
+</script>
+
+<!-- ===== REVIEW SCHEMA ===== -->
+<script type="application/ld+json">
+{
+ "@context":"https://schema.org",
+ "@type":"Service",
+ "name":"AC Repair Service",
+ "provider":{
+   "@type":"HVACBusiness",
+   "name":"Chillwise Air Conditioner"
+ },
+ "aggregateRating":{
+   "@type":"AggregateRating",
+   "ratingValue":"4.8",
+   "reviewCount":"27"
+ }
+}
+</script>
+
+<!-- ===== FAQ SCHEMA ===== -->
+<script type="application/ld+json">
+{
+ "@context":"https://schema.org",
+ "@type":"FAQPage",
+ "mainEntity":[
+   {
+     "@type":"Question",
+     "name":"What is the cost of AC repair service in Delhi?",
+     "acceptedAnswer":{
+       "@type":"Answer",
+       "text":"AC repair service in Delhi starts from ₹499 depending on the issue and AC type."
+     }
+   },
+   {
+     "@type":"Question",
+     "name":"Do you provide same-day AC service?",
+     "acceptedAnswer":{
+       "@type":"Answer",
+       "text":"Yes, we provide same-day AC repair and servicing in West Delhi."
+     }
+   }
+ ]
+}
+</script>
+
 <style>
-:root{
-  --navy:#020617;
-  --blue:#0ea5e9;
-  --green:#22c55e;
-  --bg:#f8fafc;
-  --card:#ffffff;
-  --darkcard:#020617;
-  --text:#0f172a;
-  --muted:#94a3b8;
-}
-
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;
-  background:var(--bg);
-  color:var(--text);
-}
-
-/* Top bar */
-.topbar{
-  background:var(--navy);
-  color:#fff;
-  text-align:center;
-  padding:9px;
-  font-size:14px;
-  font-weight:600;
-}
-
-/* Hero */
-.hero{
-  background:linear-gradient(135deg,#0284c7,#0ea5e9);
-  color:#fff;
-  padding:64px 20px;
-  text-align:center;
-}
-
-.hero h1{
-  font-size:36px;
-  margin-bottom:12px;
-}
-
-.hero p{
-  font-size:16px;
-  opacity:.95;
-}
-
-.hero .phone{
-  font-size:24px;
-  font-weight:900;
-  margin:18px 0;
-}
-
-.hero a{
-  display:inline-block;
-  margin:6px;
-  padding:15px 36px;
-  border-radius:40px;
-  font-weight:800;
-  text-decoration:none;
-  color:#fff;
-}
-
-.whatsapp{background:var(--green)}
-.call{background:var(--navy)}
-
-/* Sections */
-section{
-  padding:60px 20px;
-}
-
-h2{
-  text-align:center;
-  font-size:30px;
-  margin-bottom:14px;
-}
-
-.section-sub{
-  text-align:center;
-  color:#475569;
-  margin-bottom:40px;
-  font-size:15px;
-}
-
-/* Grid */
-.grid{
-  max-width:1100px;
-  margin:auto;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:26px;
-}
-
-/* Cards */
-.card{
-  background:var(--card);
-  border-radius:20px;
-  padding:30px;
-  box-shadow:0 12px 32px rgba(2,6,23,.08);
-}
-
-.card h3{
-  font-size:19px;
-  margin-bottom:10px;
-}
-
-.card p{
-  font-size:15px;
-  color:#475569;
-}
-
-/* PREMIUM PRICING */
-.pricing{
-  background:#0f172a;
-  color:#e5e7eb;
-}
-
-.pricing h2{color:#fff}
-.pricing .section-sub{color:#94a3b8}
-
-.price-grid{
-  max-width:1100px;
-  margin:auto;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:24px;
-}
-
-.price-card{
-  background:#020617;
-  border-radius:22px;
-  padding:28px;
-  border:1px solid rgba(255,255,255,.06);
-}
-
-/* Brands */
-.brands{
-  max-width:900px;
-  margin:auto;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
-  gap:18px;
-}
-
-.brand{
-  background:#fff;
-  padding:18px;
-  border-radius:16px;
-  font-weight:800;
-  text-align:center;
-}
-
-/* Footer */
-footer{
-  background:var(--navy);
-  color:#cbd5e1;
-  padding:28px;
-  text-align:center;
-  font-size:14px;
-}
-
-/* Floating */
-.whatsapp-float{
-  position:fixed;
-  right:18px;
-  bottom:78px;
-  background:var(--green);
-  color:#fff;
-  padding:14px 16px;
-  border-radius:50%;
-  font-size:22px;
-  text-decoration:none;
-}
-
-.callbar{
-  position:fixed;
-  bottom:0;
-  left:0;
-  width:100%;
-  background:var(--navy);
-  text-align:center;
-  padding:15px;
-}
-
-.callbar a{
-  color:#fff;
-  text-decoration:none;
-  font-weight:900;
-}
+body{margin:0;font-family:Arial;background:#f8fafc}
+.topbar{background:#020617;color:#fff;padding:10px;text-align:center}
+.hero{background:linear-gradient(135deg,#0284c7,#0ea5e9);color:#fff;padding:60px 20px;text-align:center}
+.hero a{display:inline-block;margin:6px;padding:14px 28px;border-radius:30px;color:#fff;text-decoration:none;font-weight:700}
+.whatsapp{background:#22c55e}
+.call{background:#020617}
+section{padding:50px 20px}
+.price-grid{max-width:1100px;margin:auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:20px}
+.price-card{background:#fff;border-radius:18px;padding:24px;box-shadow:0 10px 30px rgba(0,0,0,.1)}
+.price{font-size:22px;color:#22c55e;font-weight:800}
+footer{background:#020617;color:#cbd5e1;padding:24px;text-align:center}
 </style>
-</head>
 
+</head>
 <body>
 
-<div class="topbar">
-📞 Same-Day AC Service Available Across Delhi
-</div>
+<div class="topbar">📞 Same-Day AC Service Available Across Delhi</div>
 
 <div class="hero">
-  <h1>Chillwise Air Conditioner</h1>
-  <p>Premium AC Repair, Installation & Gas Filling Services</p>
-  <div class="phone">Call: 9690990107</div>
-
+  <h1>AC Repair Service in Delhi</h1>
+  <p>Chillwise Air Conditioner – Trusted Local Experts</p>
   <a href="https://wa.me/919690990107" class="whatsapp">WhatsApp Booking</a>
   <a href="tel:9690990107" class="call">Call Now</a>
 </div>
 
 <section>
-  <h2>Our Core Services</h2>
-  <p class="section-sub">Experienced technicians • Honest diagnosis • Quality workmanship</p>
+<h2>Transparent AC Service Pricing</h2>
 
-  <div class="grid">
-    <div class="card"><h3>AC Repair & Servicing</h3><p>Complete inspection, cleaning and fault repair.</p></div>
-    <div class="card"><h3>AC Installation & Uninstallation</h3><p>Safe installation for split & window AC units.</p></div>
-    <div class="card"><h3>Gas Filling & Leakage Fix</h3><p>Accurate gas refilling with leakage testing.</p></div>
-  </div>
-</section>
+<div class="price-grid">
 
-<section class="pricing">
-  <h2>Transparent Service Pricing</h2>
-  <p class="section-sub">Premium service • Clear rates • No hidden charges</p>
-</section>
+<div class="price-card"><h3>AC Servicing (Jet Pump)</h3><div class="price">Starting ₹499</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Split AC General Service</h3><div class="price">Starting ₹599</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Window AC Service</h3><div class="price">Starting ₹499</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>AC Gas Refilling</h3><div class="price">Starting ₹2,499</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Gas Leakage Check</h3><div class="price">Starting ₹499</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Split AC Installation</h3><div class="price">Starting ₹1,299</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Split AC Uninstallation</h3><div class="price">Starting ₹800</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>PCB Repair (Inverter AC)</h3><div class="price">Starting ₹4,500</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>PCB Repair (Non-Inverter AC)</h3><div class="price">Starting ₹2,000</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Fan Motor Replacement</h3><div class="price">Starting ₹2,500</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Swing Motor Replacement</h3><div class="price">Starting ₹800</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Capacitor Replacement</h3><div class="price">Starting ₹800</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Noise Issue Fixing</h3><div class="price">Starting ₹500</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Water Leakage Repair</h3><div class="price">Starting ₹400</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Window AC Installation</h3><div class="price">Starting ₹699</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Window AC Uninstallation</h3><div class="price">Starting ₹500</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Copper Pipe (per meter)</h3><div class="price">Starting ₹1,399</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Drain Pipe (per feet)</h3><div class="price">Starting ₹50</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Wiring (per meter)</h3><div class="price">Starting ₹150</div><a href="tel:9690990107">📞 Call</a></div>
+<div class="price-card"><h3>Stabilizer Installation</h3><div class="price">Starting ₹200</div><a href="tel:9690990107">📞 Call</a></div>
 
-<!-- ✅ SEO CONTENT BLOCK ADDED -->
-<section>
-  <h2>Best AC Repair Service in Delhi</h2>
-  <p>
-    Chillwise Air Conditioner provides professional AC repair service in Delhi
-    for split AC and window AC units. We offer AC servicing, AC installation,
-    AC gas filling, leakage repair and complete AC maintenance with same-day service.
-  </p>
-
-  <h2>AC Service Near You in West Delhi</h2>
-  <p>
-    We serve Uttam Nagar, West Delhi, Dwarka, Janakpuri and nearby areas of Delhi.
-    If you are searching for <strong>AC repair near me</strong>,
-    <strong>AC service in West Delhi</strong> or
-    <strong>AC technician in Delhi</strong>,
-    our experienced team is ready to help.
-  </p>
-</section>
-
-<section>
-  <h2>Brands We Service</h2>
-  <div class="brands">
-    <div class="brand">LG</div>
-    <div class="brand">Samsung</div>
-    <div class="brand">Voltas</div>
-    <div class="brand">Daikin</div>
-    <div class="brand">Hitachi</div>
-    <div class="brand">O’General</div>
-  </div>
+</div>
 </section>
 
 <footer>
-© 2025 Chillwise Air Conditioner • All Rights Reserved
+© 2025 Chillwise Air Conditioner<br>
+Service Areas: Uttam Nagar, West Delhi, Dwarka, Janakpuri
 </footer>
-
-<a href="https://wa.me/919690990107" class="whatsapp-float">💬</a>
-<div class="callbar">
-  <a href="tel:9690990107">📞 Call Now: 9690990107</a>
-</div>
 
 </body>
 </html>
